--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -837,9 +837,9 @@
         </div>
 
         <!-- User View data -->
-        <div *ngIf="viewflag">
+        <!-- <div *ngIf="viewflag">
 
-            <!-- View data -->
+            View data
             <section style="background-color: #eee;">
                 <div class="container py-5">
                     <div class="row">
@@ -893,17 +893,13 @@
                                             <div class="col-sm-6">
                                                 <p class="mb-0">First Name : {{user.fname}}</p>
                                             </div>
-                                            <!-- <div class="col-sm-6">
-                                                    <p class="text-muted mb-0">{{user.fname}}</p>
-                                                </div> -->
+                                            
                                         </div>
                                         <div class="col-sm-6">
                                             <div class="col-sm-12">
                                                 <p class="mb-0">Last Name : {{user.lname}}</p>
                                             </div>
-                                            <!-- <div class="col-sm-6">
-                                                    <p class="text-muted mb-0">{{user.lname}}</p>
-                                                </div> -->
+                                            
                                         </div>
 
                                     </div>
@@ -915,9 +911,6 @@
                                             </div>
                                         </div>
 
-                                        <!-- <div class="col-sm-6">
-                                                <p class="text-muted mb-0">{{user.emailId}}</p>
-                                            </div> -->
                                     </div>
                                     <br>
                                     <div class="row">
@@ -926,17 +919,13 @@
                                             <div class="col-sm-12">
                                                 <p class="mb-0">Mobile Number: {{user.mno}}</p>
                                             </div>
-                                            <!-- <div class="col-sm-6">
-                                                    <p class="text-muted mb-0">{{user.mno}}</p>
-                                                </div> -->
+                                          
                                         </div>
                                         <div class="col-sm-6">
                                             <div class="col-sm-12">
                                                 <p class="mb-0">Age : {{user.age}}</p>
                                             </div>
-                                            <!-- <div class="col-sm-6">
-                                                    <p class="text-muted mb-0">{{user.age}}</p>
-                                                </div> -->
+                                         
                                         </div>
 
                                     </div>
@@ -971,7 +960,7 @@
                     </div>
                 </div>
             </section>
-        </div>
+        </div> -->
 
         <div *ngIf="viewflag">
 
