--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,9 +7,10 @@
         <br>
         <br>
         <br>
+        <br>
         <div class="container-fluid">
             <div>
-                <a class="navbar-brand" href="#"
+                <a class="navbar-brand" href="#" matTooltip="Info about the action"
                     style="text-align: center; font-family: 'Times New Roman', Times, serif; margin-left: 20px; font-weight: bold;">DemoApp</a>
             </div>
     
@@ -28,7 +29,7 @@
                         <a class="nav-link" [routerLink]="['/aboutUs']">ABOUT US</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">JOBS</a>
+                        <a class="nav-link" [routerLink]="['/angularMattable']">JOBS</a>
                     </li>
                     <li class="nav-item active">
                         <a class="nav-link" href="#">CLIENTS</a>
@@ -73,6 +74,7 @@
     
             </div>
         </div>
+        <br>
         <br>
         <br>
 
