--- a/src/app/user-table/user-table.component.html
+++ b/src/app/user-table/user-table.component.html
@@ -139,7 +139,8 @@
                                                     class="thumbnail"></div>
                                             <div>
                                                 <input hidden type="file" style="font-size: 0.75rem;" mdbRipple
-                                                    rippleColor="dark" #profileUpload (change)="onChangeFileField($event)" />
+                                                    rippleColor="dark" #profileUpload
+                                                    (change)="onChangeFileField($event)" />
                                                 <button type="button" class="btn btn-primary btn-sm"
                                                     (click)="profileUpload.click()">Edit photo</button>
 
@@ -339,7 +340,8 @@
                                                 class="thumbnail"></div>
                                         <div>
                                             <input hidden type="file" style="font-size: 0.75rem;" mdbRipple
-                                                rippleColor="dark" #profileUpload (change)="onChangeFileField($event)" />
+                                                rippleColor="dark" #profileUpload
+                                                (change)="onChangeFileField($event)" />
                                             <button type="button" class="btn btn-primary btn-sm"
                                                 (click)="profileUpload.click()">Edit photo</button>
 
@@ -483,7 +485,7 @@
                 </table>
             </div>
         </div>
-
+        
     </div>
 
     <br>
