--- a/src/app/about-us/about-us.component.css
+++ b/src/app/about-us/about-us.component.css
@@ -1,5 +1,5 @@
-.bg-image {
+/* .bg-image {
     background-image: url('https://media.istockphoto.com/id/1298405314/vector/job-interview.jpg?s=1024x1024&w=is&k=20&c=pAYwMUs1T3L4hGXluPbmaZq2LgkXw2mUy7xVHVwxO8Y=');
-    height: 900px; width: 900px;
+    height: 200px; width: 200px;
     text-decoration-color: aliceblue; color: azure; font-weight: bolder;
-}
+} */
