--- a/src/app/homepage/homepage.component.css
+++ b/src/app/homepage/homepage.component.css
@@ -3,7 +3,23 @@
 }
 
 .bg-image {
-    background-image: url('https://media.istockphoto.com/id/1352650187/photo/human-resource-manager-checks-the-cv-online-to-choose-the-perfect-employee-for-his-business.jpg?s=2048x2048&w=is&k=20&c=9DTebqC41cJUODwJ2YHIeDXeXt9h6ocoHpHoepwmRI0=');
-    height: 600px; 
-    text-decoration-color: aliceblue; color: azure; font-weight: bolder;
+    background-image: url("https://media.istockphoto.com/id/1352650187/photo/human-resource-manager-checks-the-cv-online-to-choose-the-perfect-employee-for-his-business.jpg?s=2048x2048&w=is&k=20&c=9DTebqC41cJUODwJ2YHIeDXeXt9h6ocoHpHoepwmRI0=");
+    text-decoration-color: aliceblue;
+    height: 600px;
+    color: azure;
+    font-weight: bolder;
+    z-index: -1;
+
 }
+
+
+/* img {
+    
+    position: absolute;
+    height: 600px;
+    width: 1235px;
+    left: 0px;
+    top: 0px;
+    opacity: 50%;
+    z-index: -6;
+} */
