--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -20,9 +20,9 @@
 
                                     <form>
 
-                                        <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Sign into your
+                                        <h3 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px; font-weight: bolder; font-style: italic;">Sign into your
                                             account
-                                        </h5>
+                                        </h3>
 
                                         <div class="form-outline mb-4">
                                             <input type="email" id="form2Example17"
