--- a/src/app/user-table/user-table.component.css
+++ b/src/app/user-table/user-table.component.css
@@ -22,8 +22,12 @@
 
 * {
     font-family: "Times New Roman", Times, serif;
-  }
+}
 
-  table {
+table {
     width: 100%;
-  }
+}
+
+.li .a{
+    color: blue;
+}
