--- a/src/app/angular-mat-table/angular-mat-table.component.html
+++ b/src/app/angular-mat-table/angular-mat-table.component.html
@@ -50,7 +50,7 @@
     <br>
     <br>
 
-    <table id="dtBasicExample" class="table table-striped table-bordered table-sm" cellspacing="0" width="100%">
+    <!-- <table id="dtBasicExample" class="table table-striped table-bordered table-sm" cellspacing="0" width="100%">
         <thead>
             <tr>
                 <th class="th-sm">Name
@@ -123,7 +123,7 @@
                 <td>$372,000</td>
             </tr>
         </tbody>
-    </table>
+    </table> -->
     
     <script>
         $(document).ready(function () {
