--- a/src/app/forms/reactive-form/reactive-form.component.html
+++ b/src/app/forms/reactive-form/reactive-form.component.html
@@ -2,13 +2,12 @@
     <app-header></app-header>
 
 
-    <section class="vh-70 bg-image"
-        style="background-image: url('https://mdbcdn.b-cdn.net/img/Photos/new-templates/search-box/img4.webp');">
+    <section class="vh-70 bg-image" style="background-color: #eee;">
         <div class="mask d-flex align-items-center h-70 gradient-custom-3">
-            
+
             <div class="container h-100">
 
-                <div class="row d-flex justify-content-center align-items-center h-100">
+                <div class="row d-flex justify-content-center align-items-center h-70">
                     <div class="col-12 col-md-9 col-lg-7 col-xl-6">
                         <br>
                         <br>
@@ -16,98 +15,152 @@
                         <br>
                         <br>
 
-                        <div class="card" style="border-radius: 15px;">
-                            <div class="card-body p-5">
-                                <h5 class="text-uppercase text-center mbt-3">Create an account- RF</h5>
+                        <form [formGroup]="form" (ngSubmit)="onSubmit()"
+                            style="font-family: 'Times New Roman', Times, serif;">
+                            <div class="container-fluid">
+                                <div class="card" style="border-radius: 15px;">
+                                    <div class="card-header">
+                                        <h4 class="card-title"
+                                            style="padding-top: 15px; text-align: center; font-family: 'Times New Roman', Times, serif; font-weight: bolder;">
+                                            Create an account</h4>
 
-                                <form [formGroup]="form" (ngSubmit)="onSubmit()">
-                                    <div class="form-group">
-                                        <label>Full Name</label>
-                                        <input type="text" formControlName="fullname"
-                                            class="form-control form-control-sm"
-                                            [ngClass]="{ 'is-invalid': submitted && f['fullname'].errors }" />
-                                        <div *ngIf="submitted && f['fullname'].errors" class="invalid-feedback">
-                                            <div *ngIf="f['fullname'].errors['required']">Fullname is required</div>
-                                        </div>
                                     </div>
+                                    <div class="card-body p-5">
 
-                                    <div class="form-group">
-                                        <label>Username</label>
-                                        <input type="text" formControlName="username"
-                                            class="form-control form-control-sm"
-                                            [ngClass]="{ 'is-invalid': submitted && f['username'].errors }" />
-                                        <div *ngIf="submitted && f['username'].errors" class="invalid-feedback">
-                                            <div *ngIf="f['username'].errors['required']">Username is required</div>
-                                            <div *ngIf="f['username'].errors['minlength']">
-                                                Username must be at least 6 characters
+                                        <!-- <div class="form-group">
+                                            <label>Full Name</label>
+                                            <input type="text" formControlName="fullname" placeholder="Full Name"
+                                                class="form-control form-control-sm"
+                                                [ngClass]="{ 'is-invalid': submitted && f['fullname'].errors }" />
+                                            <div *ngIf="submitted && f['fullname'].errors" class="invalid-feedback">
+                                                <div *ngIf="f['fullname'].errors['required']">Fullname is required</div>
                                             </div>
-                                            <div *ngIf="f['username'].errors['maxlength']">
-                                                Username must not exceed 20 characters
-                                            </div>
-                                        </div>
-                                    </div>
+                                        </div> -->
 
-                                    <div class="form-group">
-                                        <label>Email</label>
-                                        <input type="text" formControlName="email" class="form-control form-control-sm"
-                                            [ngClass]="{ 'is-invalid': submitted && f['email'].errors }" />
-                                        <div *ngIf="submitted && f['email'].errors" class="invalid-feedback">
-                                            <div *ngIf="f['email'].errors['required']">Email is required</div>
-                                            <div *ngIf="f['email'].errors['email']">Email is invalid</div>
-                                        </div>
-                                    </div>
+                                        <div class="form-group">
+                                            <!-- <label>Username</label> -->
 
-                                    <div class="form-group">
-                                        <label>Password</label>
-                                        <input type="password" formControlName="password"
-                                            class="form-control form-control-sm"
-                                            [ngClass]="{ 'is-invalid': submitted && f['password'].errors }" />
-                                        <div *ngIf="submitted && f['password'].errors" class="invalid-feedback">
-                                            <div *ngIf="f['password'].errors['required']">Password is required</div>
-                                            <div *ngIf="f['password'].errors['minlength']">
-                                                Password must be at least 6 characters
+                                            <div class="input-group mb-3">
+                                                <span class="input-group-text">@</span>
+                                                <input type="text" formControlName="username" class="form-control" placeholder="Username"
+                                                    name="usrname" [ngClass]="{ 'is-invalid': submitted && f['username'].errors }" />
                                             </div>
-                                            <div *ngIf="f['password'].errors['maxlength']">
-                                                Username must not exceed 40 characters
+
+                                            <!-- <input type="text" formControlName="username" placeholder="Username"
+                                                class="form-control form-control-sm"
+                                                [ngClass]="{ 'is-invalid': submitted && f['username'].errors }" /> -->
+                                            <div *ngIf="submitted && f['username'].errors" class="invalid-feedback">
+                                                <div *ngIf="f['username'].errors['required']">Username is required</div>
+                                                <div *ngIf="f['username'].errors['minlength']">
+                                                    Username must be at least 6 characters
+                                                </div>
+                                                <div *ngIf="f['username'].errors['maxlength']">
+                                                    Username must not exceed 20 characters
+                                                </div>
                                             </div>
                                         </div>
-                                    </div>
 
-                                    <div class="form-group">
-                                        <label>Confirm Password</label>
-                                        <input type="password" formControlName="confirmPassword"
-                                            class="form-control form-control-sm"
-                                            [ngClass]="{ 'is-invalid': submitted && f['confirmPassword'].errors }" />
-                                        <div *ngIf="submitted && f['confirmPassword'].errors" class="invalid-feedback">
-                                            <div *ngIf="f['confirmPassword'].errors['required']">
-                                                Confirm Password is required
+                                        <br>
+                                        <div class="form-group">
+                                            <!-- <label>Email</label> -->
+
+                                            <div class="input-group mb-3">
+                                                <span class="input-group-text"><mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="email"></mat-icon></span>
+                                                <input type="text" formControlName="email" placeholder="...@gmail.com"
+                                                class="form-control"
+                                                [ngClass]="{ 'is-invalid': submitted && f['email'].errors }" />
                                             </div>
-                                            <div *ngIf="f['confirmPassword'].errors['matching']">
-                                                Confirm Password does not match
+
+                                            <!-- <input type="text" formControlName="email" placeholder="manoj.mym@gmail.com"
+                                                class="form-control form-control-sm"
+                                                [ngClass]="{ 'is-invalid': submitted && f['email'].errors }" /> -->
+                                            <div *ngIf="submitted && f['email'].errors" class="invalid-feedback">
+                                                <div *ngIf="f['email'].errors['required']">Email is required</div>
+                                                <div *ngIf="f['email'].errors['email']">Email is invalid</div>
                                             </div>
                                         </div>
-                                    </div>
 
-                                    <div class="form-group form-check">
-                                        <input type="checkbox" formControlName="acceptTerms" class="form-check-input"
-                                            [ngClass]="{ 'is-invalid': submitted && f['acceptTerms'].errors }" />
-                                        <label for="acceptTerms" class="form-check-label">I have read and agree to the
-                                            Terms</label>
-                                        <div *ngIf="submitted && f['acceptTerms'].errors" class="invalid-feedback">
-                                            Accept Terms is required
+                                        <br>
+                                        <div class="form-group">
+                                            <!-- <label>Password</label> -->
+                                            <div class="input-group mb-3">
+                                                <span class="input-group-text"><mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="password"></mat-icon></span>
+                                                <input type="password" formControlName="password" placeholder="Password"
+                                                class="form-control"
+                                                [ngClass]="{ 'is-invalid': submitted && f['password'].errors }" />
+                                            </div>
+                                            
+                                            <!-- <input type="password" formControlName="password" placeholder="Password"
+                                                class="form-control form-control-sm"
+                                                [ngClass]="{ 'is-invalid': submitted && f['password'].errors }" /> -->
+                                            <div *ngIf="submitted && f['password'].errors" class="invalid-feedback">
+                                                <div *ngIf="f['password'].errors['required']">Password is required</div>
+                                                <div *ngIf="f['password'].errors['minlength']">
+                                                    Password must be at least 6 characters
+                                                </div>
+                                                <div *ngIf="f['password'].errors['maxlength']">
+                                                    Username must not exceed 40 characters
+                                                </div>
+                                            </div>
                                         </div>
-                                    </div>
 
-                                    <div class="form-group">
-                                        <button type="submit" class="btn btn-primary">Register</button>
-                                        <button type="button" (click)="onReset()" class="btn btn-warning float-right">
-                                            Reset
-                                        </button>
-                                    </div>
-                                </form>
+                                        <br>
+                                        <div class="form-group">
+                                            <!-- <label>Confirm Password</label> -->
 
+                                            <div class="input-group mb-3">
+                                                <span class="input-group-text"><mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="password"></mat-icon></span>
+                                                <input type="password" formControlName="confirmPassword"
+                                                placeholder="Confirm Password" class="form-control"
+                                                [ngClass]="{ 'is-invalid': submitted && f['confirmPassword'].errors }" />
+                                            </div>
+<!-- 
+                                            <input type="password" formControlName="confirmPassword"
+                                                placeholder="Confirm Password" class="form-control form-control-sm"
+                                                [ngClass]="{ 'is-invalid': submitted && f['confirmPassword'].errors }" /> -->
+                                            <div *ngIf="submitted && f['confirmPassword'].errors"
+                                                class="invalid-feedback">
+                                                <div *ngIf="f['confirmPassword'].errors['required']">
+                                                    Confirm Password is required
+                                                </div>
+                                                <div *ngIf="f['confirmPassword'].errors['matching']">
+                                                    Confirm Password does not match
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <br>
+                                        <div class="form-group form-check">
+                                            <input type="checkbox" formControlName="acceptTerms"
+                                                class="form-check-input"
+                                                [ngClass]="{ 'is-invalid': submitted && f['acceptTerms'].errors }" />
+                                            <label for="acceptTerms" class="form-check-label">I have read and agree to
+                                                the
+                                                Terms</label>
+                                            <div *ngIf="submitted && f['acceptTerms'].errors" class="invalid-feedback">
+                                                Accept Terms is required
+                                            </div>
+                                        </div>
+
+                                    </div>
+                                    <div class="card-footer">
+                                        <div class="form-group form-control-sm">
+                                            <button type="button" (click)="onReset()" class="btn btn-warning"
+                                                style="margin-left: 290px;">
+                                                Reset
+                                            </button>
+                                            <button type="submit" class="btn btn-primary float-right">Register</button>
+
+                                        </div>
+
+                                    </div>
+                                </div>
                             </div>
-                        </div>
+
+                        </form>
+
+
+                        <br>
                         <br>
                         <br>
                         <br>
@@ -116,12 +169,9 @@
                 </div>
 
             </div>
-           
+
         </div>
     </section>
-    
-    
-
 
     <app-footer></app-footer>
 </div>
