--- a/src/app/homepage/homepage.component.css
+++ b/src/app/homepage/homepage.component.css
@@ -12,6 +12,26 @@
 
 }
 
+/* .modal-open {
+    overflow: hidden;
+    z-index: var(--bs-backdrop-zindex) -1;
+    z-index: -1;
+} */
+
+
+
+/* .modal-backdrop {
+    --bs-backdrop-zindex: 1050;
+    --bs-backdrop-bg: #000;
+    --bs-backdrop-opacity: 0.5;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: var(--bs-backdrop-zindex);
+    width: 100vw;
+    height: 100vh;
+    background-color: var(--bs-backdrop-bg);
+} */
 
 /* img {
     
@@ -23,3 +43,12 @@
     opacity: 50%;
     z-index: -6;
 } */
+
+mat-slider {
+    width: 207px;
+    color: antiquewhite;
+}
+
+tag-input {
+    border-radius: 5px;
+}
