--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -112,7 +112,7 @@
                 <!-- ngbootstrap modal -->
 
                 <!-- <form name="form" #f="ngForm" (ngSubmit)="f.form.valid && submitData(f)" novalidate> -->
-                    <!-- <ng-template #content let-modal>
+                <!-- <ng-template #content let-modal>
 
                         modal header
                         <div class="modal-header">
@@ -419,7 +419,7 @@
                     </ng-template> -->
                 <!-- </form> -->
 
-                
+
 
                 <!-- <button class="btn btn-lg btn-outline-primary" (click)="open(content)">Launch demo modal</button>
 
@@ -480,10 +480,10 @@
                                                     <div class="col-lg-6">
 
                                                         <div class="form-group">
-                                                            <input type="text" class="form-control form-control-sm" required
-                                                                name="fname" [(ngModel)]="user.fname" 
+                                                            <input type="text" class="form-control form-control-sm"
+                                                                required name="fname" [(ngModel)]="user.fname"
                                                                 #fname="ngModel" placeholder="First name" maxlength="20"
-                                                                pattern="[a-zA-Z][a-zA-Z ]+"
+                                                                minlength="5" pattern="[a-zA-Z][a-zA-Z ]+"
                                                                 [ngClass]="{ 'is-invalid':fname.dirty && fname.touched && fname.errors }" />
 
                                                             <div *ngIf="fname.invalid && (fname.dirty || fname.touched || fname.untouched)"
@@ -492,6 +492,9 @@
                                                                 </div>
                                                                 <div *ngIf="fname.errors?.['pattern']">Only alphabets
                                                                     allowed</div>
+                                                                <div *ngIf="fname.errors?.['minlength']">Length not
+                                                                    greater than 20 characters
+                                                                </div>
 
                                                             </div>
                                                         </div>
@@ -582,16 +585,17 @@
                                                                 <input name="age" form-control form-control-sm
                                                                     [(ngModel)]="user.age" required age #age="ngModel"
                                                                     placeholder="Age" aria-label="Age"
-                                                                    [ngClass]="{ 'is-invalid': f.submitted && age.errors }"
+                                                                    [ngClass]="{ 'is-invalid': age.dirty && age.touched && age.errors }"
                                                                     matSliderThumb>
+                                                                <div *ngIf="age.invalid && (age.dirty || age.touched || age.untouched)"
+                                                                    class="invalid-feedback">
+                                                                    <div *ngIf="age.errors?.['required']">Age is required
+                                                                    </div>
+                                                                </div>
                                                             </mat-slider>
 
 
-                                                            <div *ngIf="f.submitted && age.errors"
-                                                                class="invalid-feedback">
-                                                                <div *ngIf="age.errors['required']">Age is required
-                                                                </div>
-                                                            </div>
+
                                                         </div>
                                                     </div>
                                                 </div>
@@ -645,26 +649,36 @@
                                                         </div>
 
                                                         <br>
+                                                        <!-- home address -->
                                                         <div class="form-group" *ngIf="Address[0] ==  'Home'">
                                                             <input type="text" class="form-control form-control-sm"
                                                                 name="address1" [(ngModel)]="user.address.home.address1"
                                                                 required address1 #address1="ngModel"
                                                                 placeholder="Address 1 ..."
-                                                                [ngClass]="{ 'is-invalid': f.submitted && address1.errors }" />
+                                                                [ngClass]="{ 'is-invalid': address1.dirty && address1.touched && address1.errors }" />
+                                                            <div *ngIf="address1.invalid && (address1.dirty || address1.touched || address1.untouched)"
+                                                                class="invalid-feedback">
+                                                                <div *ngIf="address1.errors?.['required']">Address1 is
+                                                                    required
+                                                                </div>
+                                                            </div>
                                                             <br>
                                                             <input type="text" class="form-control form-control-sm"
                                                                 name="address2" [(ngModel)]="user.address.home.address2"
                                                                 required address2 #address2="ngModel"
                                                                 placeholder="Address 2 ..."
-                                                                [ngClass]="{ 'is-invalid': f.submitted && address2.errors }" />
-                                                            <div *ngIf="f.submitted && address2.errors"
+                                                                [ngClass]="{ 'is-invalid': address2.dirty && address2.touched && address2.errors  }" />
+                                                            <div *ngIf="address2.invalid && (address2.dirty || address2.touched || address2.untouched)"
                                                                 class="invalid-feedback">
-                                                                <div *ngIf="address2.errors['required']">Address is
+                                                                <div *ngIf="address2.errors?.['required']">Address2 is
                                                                     required
                                                                 </div>
                                                             </div>
+
+
                                                         </div>
 
+                                                        <!-- company address -->
                                                         <div class="form-group"
                                                             *ngIf="Address[1] ==  'Company' && Address[0] !=  'Home'">
                                                             <input type="text" class="form-control form-control-sm"
@@ -672,17 +686,23 @@
                                                                 [(ngModel)]="user.address.company.address3" required
                                                                 address1 #address3="ngModel"
                                                                 placeholder="Comp Address 1 ..."
-                                                                [ngClass]="{ 'is-invalid': f.submitted && address3.errors }" />
+                                                                [ngClass]="{ 'is-invalid': address3.dirty && address3.touched && address3.errors }" />
+                                                            <div *ngIf="address3.invalid && (address3.dirty || address3.touched || address3.untouched)"
+                                                                class="invalid-feedback">
+                                                                <div *ngIf="address3.errors?.['required']">Address1 is
+                                                                    required
+                                                                </div>
+                                                            </div>
                                                             <br>
                                                             <input type="text" class="form-control form-control-sm"
                                                                 name="address2"
                                                                 [(ngModel)]="user.address.company.address4" required
                                                                 address #address4="ngModel"
                                                                 placeholder="Comp Address 2 ..."
-                                                                [ngClass]="{ 'is-invalid': f.submitted && address4.errors }" />
-                                                            <div *ngIf="f.submitted && address4.errors"
+                                                                [ngClass]="{ 'is-invalid': address4.dirty && address4.touched && address4.errors }" />
+                                                            <div *ngIf="address4.invalid && (address4.dirty || address4.touched || address4.untouched)"
                                                                 class="invalid-feedback">
-                                                                <div *ngIf="address4.errors['required']">Address is
+                                                                <div *ngIf="address4.errors?.['required']">Address2 is
                                                                     required
                                                                 </div>
                                                             </div>
@@ -768,8 +788,8 @@
                                                         data-bs-dismiss="modal">Cancel</button>
                                                 </div>
                                                 <div class="col-lg-6">
-                                                    <button type="submit" class="btn btn-info form-control" [disabled]="!f.valid"
-                                                        data-bs-dismiss="modal"
+                                                    <button type="submit" class="btn btn-info form-control"
+                                                        [disabled]="!f.valid" data-bs-dismiss="modal"
                                                         style="margin-right: 10px;">Submit</button>
 
                                                     <!-- [disabled]="!f.valid" data-bs-dismiss="modal"-->
