--- a/src/app/homepage/homepage.component.css
+++ b/src/app/homepage/homepage.component.css
@@ -45,10 +45,79 @@
 } */
 
 mat-slider {
-    width: 207px;
+    width: 220px;
     color: antiquewhite;
 }
 
 tag-input {
     border-radius: 5px;
 }
+
+/* age-slider.component.css */
+/* .age-slider-container {
+    max-width: 400px;
+    margin: 20px auto;
+  } */
+
+.min-max-labels {
+    /* display: flex; */
+    justify-content: space-between;
+    /* position: fixed; */
+    /* margin-top: 2px; */
+    color: black;
+}
+
+.mat-slider-horizontal {
+    width: 100%;
+    color: black;
+    background-color: black;
+}
+
+/* .mat-slider-thumb {
+    background-color: #007bff;
+  } */
+
+.mdc-slider__input {
+    cursor: pointer;
+    left: 0;
+    margin: 0;
+    height: 100%;
+    opacity: 0;
+    pointer-events: none;
+    /* position: fixed; */
+    top: 0;
+    width: 100%;
+}
+
+
+/* w3 school slider */
+.slider {
+    -webkit-appearance: none;
+    width: 100%;
+    height: 25px;
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+  }
+  
+  .slider:hover {
+    opacity: 1;
+  }
+  
+  .slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 200px;
+    height: 200px;
+    background: #04AA6D;
+    cursor: pointer;
+  }
+  
+  .slider::-moz-range-thumb {
+    width: 200px;
+    height: 200px;
+    background: #04AA6D;
+    cursor: pointer;
+  }
